Split some code out

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,13 @@ set(CMAKE_CXX_STANDARD 11)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
-add_executable(shoulda shoulda.cc)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+add_executable(
+  shoulda
+  shoulda.cc
+  libshoulda/compilation_database.cc
+  libshoulda/error.cc)
 
 # TODO
 target_link_libraries(shoulda clang)
