--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.0.0)
 
-set(CMAKE_CXX_STANDARD 11)
+# Bumped this from 11 to 14 to expose a new std::equal signature:
+#     bool equal(InputIt1 first1, InputIt1 last1,
+#                InputIt2 first2, InputIt2 last2);
+set(CMAKE_CXX_STANDARD 14)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
