--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ set(CMAKE_CXX_STANDARD 14)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
+# TODO needed for libclang++?
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -fno-rtti")
+
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 add_library(
@@ -27,6 +30,15 @@ add_executable(
   tests
   tests/tests.cc)
 
-target_link_libraries(shoulda clang libshoulda)
+target_link_libraries(
+  shoulda
+  #libshoulda
+  clang
+  clangAST
+  clangBasic
+  clangFrontend
+  clangTooling
+  LLVM
+  )
 
 target_link_libraries(tests clang libshoulda)
